Make the histogram jaxb classes

--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,29 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.8.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <generatePackage>dk.statsbiblioteket.medieplatform.newspaper.histogram</generatePackage>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>dk.statsbiblioteket.medieplatform.newspaper.manualQA.ManualQAFlaggerComponent</mainClass>
+                            <mainClass>dk.statsbiblioteket.medieplatform.newspaper.manualQA.ManualQAFlaggerComponent
+                            </mainClass>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
