Histogram Parser class

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+            <version>1.5</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>dk.statsbiblioteket.newspaper</groupId>
