Test config for dimension checks

--- a/src/test/config/config.properties
+++ b/src/test/config/config.properties
@@ -28,3 +28,7 @@ flag.mix.modelnumbers=RS325
 flag.mix.scannerserialnos=SN#8060359
 flag.mix.scannersoftwares=Rollfilm;2.6g,Rollfilm;2.7
 flag.mix.imageproducers=Statsbiblioteket;Proquest
+flag.mix.minimagewidth=2000
+flag.mix.maximagewidth=15000
+flag.mix.minimageheight=4000
+flag.mix.maximageheight=12000
