Generate some extra flags for demo.

--- a/src/test/config/inconsistent-flagging-config.properties
+++ b/src/test/config/inconsistent-flagging-config.properties
@@ -1,4 +1,4 @@
-flag.mix.scannermanufacturers=Wicks and Wilsonn
+flag.mix.scannermanufacturers=Wicks and Wilson
 flag.mix.scannermodels=Scanstation
 flag.mix.modelnumbers=RS325
 flag.mix.scannerserialnos=SN#8060359
