--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>autonomous-component</artifactId>
-      <version>1.4.3-SNAPSHOT</version>
+      <version>1.4.5</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
