--- a/pom.xml
+++ b/pom.xml
@@ -95,12 +95,22 @@
   <dependencies>
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
-      <artifactId>autonomous-component</artifactId>
+      <artifactId>tree-processor</artifactId>
+      <version>1.6-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>dk.statsbiblioteket.doms.central</groupId>
+      <artifactId>centralWebservice-lib</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>dk.statsbiblioteket.newspaper</groupId>
+      <artifactId>sboi-doms-autonomous-component</artifactId>
       <version>1.6-SNAPSHOT</version>
     </dependency>
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
-        <artifactId>doms-event-client</artifactId>
+        <artifactId>tree-processor-runnable-component</artifactId>
         <version>1.6-SNAPSHOT</version>
       </dependency>
     <dependency>
