--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>tree-processor</artifactId>
-      <version>1.6-SNAPSHOT</version>
+      <version>1.6</version>
     </dependency>
     <dependency>
       <groupId>dk.statsbiblioteket.doms.central</groupId>
@@ -106,12 +106,12 @@
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>sboi-doms-autonomous-component</artifactId>
-      <version>1.6-SNAPSHOT</version>
+      <version>1.6</version>
     </dependency>
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
         <artifactId>tree-processor-runnable-component</artifactId>
-        <version>1.6-SNAPSHOT</version>
+        <version>1.6</version>
       </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
