Use a custom config for the consistent test. Update the test configs to work

--- a/src/test/config/consistent-flagging-config.properties
+++ b/src/test/config/consistent-flagging-config.properties
@@ -1,19 +1,3 @@
-flag.mix.scannermanufacturers=Wicks and Wilson
-flag.mix.scannermodels=Scanstation
-flag.mix.modelnumbers=RS325
-flag.mix.scannerserialnos=SN#8060359
-flag.mix.scannersoftwares=Rollfilm;2.6g,Rollfilm;2.7
-flag.mix.imageproducers=Statsbiblioteket;Proquest
-flag.mix.minimagewidth=2000
-flag.mix.maximagewidth=15000
-flag.mix.minimageheight=4000
-flag.mix.maximageheight=12000
-
-flag.alto.accuracy=60.0
-flag.alto.accuracy.perfile=20.0
-flag.alto.zeroaccuracy.ignore=true
-
-
 # MANUAL QA FLAGGER CONFIG - MissingColorsHistogramChecker:
 # The number of missing colors allowed
 flag.numberofmissingcolorsallowed=0
@@ -52,5 +36,34 @@ flag.endspikemaxpercentallowednearblack=2
 flag.endspikemaxpercentallowednearwhite=0.5
 
 
+# Specific properties for MIX metadata. These flag changes to the scanning
+# hardware, software, or wetware which should trigger manual QA. These can all
+# be comma-separated lists.
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannermanufacturers=Wicks and Wilson
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannermodels=Scanstation
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.modelnumbers=RS325
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannerserialnos=SN#8060359
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannersoftwares=Rollfilm;2.6g
+# Senthil added according to 9* batch B400026952148-RT2
+flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, operator-name-here
+flag.mix.minimagewidth=2000
+flag.mix.maximagewidth=15000
+# In actual 9* batch (B400026952148-RT2) was observed a valid height of 1826
+flag.mix.minimageheight=1800
+flag.mix.maximageheight=12000
+
+flag.alto.accuracy=0.0
+# Set to never trigger on low OCR accuracy for a single file, as we expect this
+# would give too many false positives
+flag.alto.accuracy.perfile=60.0
+flag.alto.zeroaccuracy.ignore=true
+
 # Max number of flags to make for one batch
 flag.maxtotalflags=100
+
+manualqa.input.files.dir=/home/newspapr/temp/qainput
