--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
   <artifactId>newspaper-manualQA-flagger</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <scm>
+    <url>https://github.com/statsbiblioteket/newspaper-manualQA-flagger</url>
+    <connection>scm:git:https://github.com/statsbiblioteket/newspaper-manualQA-flagger.git</connection>
+    <developerConnection>scm:git:git@github.com:statsbiblioteket/newspaper-manualQA-flagger.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <build>
     <plugins>
       <plugin>
