--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -1,21 +1,98 @@
 #Doms
-doms.username=username
-doms.password=password
+doms.username=
+doms.password=
 doms.url=http://achernar:7880/fedora
 doms.pidgenerator.url=http://achernar:7880/pidgenerator-service
 
+#MFPak
+mfpak.postgres.url=jdbc:postgresql://achernar/mfpak-devel
+mfpak.postgres.user=
+mfpak.postgres.password=
+
 #Batch iterator
 iterator.useFileSystem=false
+iterator.filesystem.batches.folder=/newspapr_batches
 iterator.datafilePattern=.*\\.jp2$
-iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,HISTOGRAM
+iterator.filesystem.groupingChar=.
+iterator.filesystem.checksumPostfix=.md5
+iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER
 iterator.doms.predicatenames=info:fedora/fedora-system:def/relations-external#hasPart
 
 #Autonomous component framework
-autonomous.lockserver.url=achernar:2181
-autonomous.sboi.url=http://achernar:57608/domsgui/search/services/SearchWS?wsdl
-autonomous.pastSuccessfulEvents=Metadata_Checked
+autonomous.lockserver.url=localhost:2181
+autonomous.sboi.url=
+autonomous.pastSuccessfulEvents=Metadata_checked
 autonomous.pastFailedEvents=
 autonomous.futureEvents=Manual_QA_Flagged
-autonomous.maxThreads=1
-autonomous.maxRuntimeForWorkers=3600000
-#autonomous.batch.structure.folder=
+autonomous.maxRuntimeForWorkers=86400000
+autonomous.component.maxResults=100
+
+# MANUAL QA FLAGGER CONFIG - MissingColorsHistogramChecker:
+# The number of missing colors allowed
+flag.numberofmissingcolorsallowed=0
+# When a color has this value or below, it is considered missing
+flag.maxvaluetodeemacolormissing=10
+
+# MANUAL QA FLAGGER CONFIG - ChoppyCurveHistogramChecker:
+# How much a value is allowed to deviate from the average of its two neighbours
+# (in pct, >0) before it is considered an irregularity (only happens if both
+# neighbours are either higher or lower)
+flag.choppycheckthreshold=0.5
+# The maximum number of peaks/valleys allowed before flagged as an error
+flag.choppycheckmaxirregularities=4
+
+# MANUAL QA FLAGGER CONFIG - EditionModsHandler:
+# The maximum number of editions of a newspaper per day before we raise a flag
+flag.maxeditionsperday=3
+
+# MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
+flag.darknessmaxnumofdarkimagesallowed=300
+flag.darknesslowesthistogramindexnotconsideredblack=3
+flag.darknesslowestacceptablepeakposition=128
+# Min number of text lines on page before we consider this a text
+# (non image-only) page, and therefore check for darkness
+flag.darknessminnumoftextlines=50
+
+# MANUAL QA FLAGGER CONFIG - EndSpikeHistogramChecker:
+# Max percentage of the total number of pixels in the histogram that are
+# allowed to be in a spike at the beginning or end of the histogram
+flag.endspikethreshold=0.1
+flag.endspikemincolorconsideredblack=0
+flag.endspikemaxcolorconsideredblack=2
+flag.endspikemincolorconsideredwhite=255
+flag.endspikemaxcolorconsideredwhite=255
+flag.endspikemaxpercentallowednearblack=2
+flag.endspikemaxpercentallowednearwhite=0.5
+
+
+# Specific properties for MIX metadata. These flag changes to the scanning
+# hardware, software, or wetware which should trigger manual QA. These can all
+# be comma-separated lists.
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannermanufacturers=The Crowley Company
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannermodels=Mekel Technology
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.modelnumbers=MACH V
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannerserialnos=120603
+# This value observed in 9* batch B400026952148-RT2
+flag.mix.scannersoftwares=Quantum Scan;V 1.02.19
+# Senthil added according to 9* batch B400026952148-RT2
+flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil
+flag.mix.minimagewidth=2000
+flag.mix.maximagewidth=15000
+# In actual 9* batch (B400026952148-RT2) was observed a valid height of 1826
+flag.mix.minimageheight=1800
+flag.mix.maximageheight=12000
+
+flag.alto.accuracy=0.0
+# Set to never trigger on low OCR accuracy for a single file, as we expect this
+# would give too many false positives
+flag.alto.accuracy.perfile=60.0
+flag.alto.zeroaccuracy.ignore=true
+
+# Max number of flags to make for one batch
+flag.maxtotalflags=100
+
+manualqa.input.files.dir=/home/newspapr/temp/qainput
