[maven-release-plugin] prepare release newspaper-manualQA-flagger-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>dk.statsbiblioteket.newspaper</groupId>
@@ -10,13 +8,13 @@
   </parent>
 
   <artifactId>newspaper-manualQA-flagger</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <scm>
     <url>https://github.com/statsbiblioteket/newspaper-manualQA-flagger</url>
     <connection>scm:git:https://github.com/statsbiblioteket/newspaper-manualQA-flagger.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/newspaper-manualQA-flagger.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>newspaper-manualQA-flagger-1.0</tag>
   </scm>
 
   <build>
