--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -15,7 +15,7 @@ iterator.filesystem.batches.folder=/newspapr_batches
 iterator.datafilePattern=.*\\.jp2$
 iterator.filesystem.groupingChar=.
 iterator.filesystem.checksumPostfix=.md5
-iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER
+iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER,HISTOGRAM
 iterator.doms.predicatenames=info:fedora/fedora-system:def/relations-external#hasPart
 
 #Autonomous component framework
@@ -42,26 +42,33 @@ flag.choppycheckthreshold=0.5
 flag.choppycheckmaxirregularities=4
 
 # MANUAL QA FLAGGER CONFIG - EditionModsHandler:
-# The maximum number of editions of a newspaper per day before we raise a flag
-flag.maxeditionsperday=3
+# The maximum number of editions of a newspaper per day before we raise a flag.
+# (Limit of 4 approved by ML/Skejby)
+flag.maxeditionsperday=4
 
 # MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
+# How many too dark images there must be before the film is flagges as too dark
 flag.darknessmaxnumofdarkimagesallowed=300
 flag.darknesslowesthistogramindexnotconsideredblack=3
 flag.darknesslowestacceptablepeakposition=128
 # Min number of text lines on page before we consider this a text
-# (non image-only) page, and therefore check for darkness
-flag.darknessminnumoftextlines=50
+# (non image-only) page, and therefore check for darkness.
+# (15 is the limit suggested by ML/Skejby)
+flag.darknessminnumoftextlines=15
+# Enabler for darkness histogram checker
+flag.darknesshistogramcheckeron=true
 
 # MANUAL QA FLAGGER CONFIG - EndSpikeHistogramChecker:
 # Max percentage of the total number of pixels in the histogram that are
-# allowed to be in a spike at the beginning or end of the histogram
+# allowed to be in a spike anywhere in the histogram (for a whole film)
 flag.endspikethreshold=0.1
 flag.endspikemincolorconsideredblack=0
 flag.endspikemaxcolorconsideredblack=2
 flag.endspikemincolorconsideredwhite=255
 flag.endspikemaxcolorconsideredwhite=255
-flag.endspikemaxpercentallowednearblack=2
+
+# 0.05 was not low enough to catch black-spikes in 9* B400026952148-RT4
+flag.endspikemaxpercentallowednearblack=0.001
 flag.endspikemaxpercentallowednearwhite=0.5
 
 
@@ -85,14 +92,18 @@ flag.mix.maximagewidth=15000
 # In actual 9* batch (B400026952148-RT2) was observed a valid height of 1826
 flag.mix.minimageheight=1800
 flag.mix.maximageheight=12000
+# Enabler for mix handler
+flag.mix.handler.on=false
 
 flag.alto.accuracy=0.0
 # Set to never trigger on low OCR accuracy for a single file, as we expect this
 # would give too many false positives
-flag.alto.accuracy.perfile=60.0
+flag.alto.accuracy.perfile=0.0
 flag.alto.zeroaccuracy.ignore=true
+# Enabler for alto word accuracy checker
+flag.alto.checker.on=false
 
-# Max number of flags to make for one batch
+# Max number of flags to make for one batch (max 100 approved by ML/Skejby)
 flag.maxtotalflags=100
 
 manualqa.input.files.dir=/home/newspapr/temp/qainput
