Moved the caches to separate package Made the utils package Generalized the HistogramUtils with the find highest and findlowest methods Generalized the min value for color and start from color 3 property values Renamed the properties values to make them more sane Reworked the logic of the missingColorsHistogramChecker

--- a/src/test/config/config.properties
+++ b/src/test/config/config.properties
@@ -1,49 +1,57 @@
 iterator.useFileSystem=false
-iterator.doms.attributenames=HISTOGRAM
+iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER,HISTOGRAM
+
+
+
+
+flag.ignoreColorsBelow=3
+# When a color has this value or below, it is considered missing
+flag.maxValueToDeemAColorMissing=10
+# Max number of flags to make for one batch (max 100 approved by ML/Skejby)
+flag.maxtotalflags=100
+
 
 # MANUAL QA FLAGGER CONFIG - MissingColorsHistogramChecker:
 # The number of missing colors allowed
-flag.numberofmissingcolorsallowed=0
-# When a color has this value or below, it is considered missing
-flag.maxvaluetodeemacolormissing=10
+flag.missingcolors.numberOfMissingColorsAllowed=0
+
 
 # MANUAL QA FLAGGER CONFIG - ChoppyCurveHistogramChecker:
 # How much a value is allowed to deviate from the average of its two neighbours
 # (in pct, >0) before it is considered an irregularity (only happens if both
 # neighbours are either higher or lower)
-flag.choppycheckthreshold=0.5
+flag.choppyCurve.checkthreshold=0.5
 # The maximum number of peaks/valleys allowed before flagged as an error
-flag.choppycheckmaxirregularities=4
+flag.choppyCurve.checkMaxIrregularities=2
 
 # MANUAL QA FLAGGER CONFIG - EditionModsHandler:
 # The maximum number of editions of a newspaper per day before we raise a flag.
 # (Limit of 4 approved by ML/Skejby)
-flag.maxeditionsperday=4
+flag.editions.maxeditionsperday=4
 
 # MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
 # How many too dark images there must be before the film is flagges as too dark
-flag.darknessmaxnumofdarkimagesallowed=300
-flag.darknesslowesthistogramindexnotconsideredblack=3
-flag.darknesslowestacceptablepeakposition=128
+flag.darkness.MaxNumOfDarkImagesAllowed=100
+flag.darkness.lowestAcceptablePeakPosition=128
 # Min number of text lines on page before we consider this a text
 # (non image-only) page, and therefore check for darkness.
 # (15 is the limit suggested by ML/Skejby)
-flag.darknessminnumoftextlines=15
+flag.darkness.minNumOfTextLines=15
+
 # Enabler for darkness histogram checker
-flag.darknesshistogramcheckeron=true
+flag.darkness.histogramCheckerOn=true
 
 # MANUAL QA FLAGGER CONFIG - EndSpikeHistogramChecker:
 # Max percentage of the total number of pixels in the histogram that are
 # allowed to be in a spike anywhere in the histogram (for a whole film)
-flag.endspikethreshold=0.1
-flag.endspikemincolorconsideredblack=0
-flag.endspikemaxcolorconsideredblack=2
-flag.endspikemincolorconsideredwhite=255
-flag.endspikemaxcolorconsideredwhite=255
+flag.endspike.threshold=0.1
+flag.endspike.minColorConsideredBlack=0
+flag.endspike.minColorConsideredWhite=255
+flag.endspike.maxColorConsideredWhite=255
 
 # 0.05 was not low enough to catch black-spikes in 9* B400026952148-RT4
-flag.endspikemaxpercentallowednearblack=7.5
-flag.endspikemaxpercentallowednearwhite=0.01
+flag.endspike.maxPercentAllowedNearBlack=5
+flag.endspike.maxPercentAllowedNearWhite=0.01
 
 
 # Specific properties for MIX metadata. These flag changes to the scanning
@@ -61,13 +69,21 @@ flag.mix.scannerserialnos=120603
 flag.mix.scannersoftwares=Quantum Scan;V 1.02.19
 # Senthil added according to 9* batch B400026952148-RT2
 flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil
-flag.mix.minimagewidth=2000
-flag.mix.maximagewidth=15000
-# In actual 9* batch (B400026952148-RT2) was observed a valid height of 1826
-flag.mix.minimageheight=1800
-flag.mix.maximageheight=12000
+
+# Min width found in B400026952148-RT4 was 2139 seen in file
+# 400026952148-14/2002-02-13-01/morgenavisenjyllandsposten-2002-02-13-01-0145.mix.xml
+flag.mix.minimagewidth=2100
+# Max width found in B400026952148-RT4 was 5052 seen in file
+# 400026952148-13/2002-02-02-01/morgenavisenjyllandsposten-2002-02-02-01-0164A.mix.xml
+flag.mix.maximagewidth=5100
+# Min height found in B400026952148-RT4 was 2832 seen in file
+# 400026952148-14/2002-02-17-01/morgenavisenjyllandsposten-2002-02-17-01-0465B.mix.xml
+flag.mix.minimageheight=2800
+# Max height found in B400026952148-RT4 was 6911 seen in file
+# 400026952148-11/2002-01-13-01/morgenavisenjyllandsposten-2002-01-13-01-0126A.mix.xml
+flag.mix.maximageheight=7000
 # Enabler for mix handler
-flag.mix.handler.on=false
+flag.mix.handler.on=true
 
 flag.alto.accuracy=60.0
 # Set to never trigger on low OCR accuracy for a single file, as we expect this
@@ -75,9 +91,7 @@ flag.alto.accuracy=60.0
 flag.alto.accuracy.perfile=0.0
 flag.alto.zeroaccuracy.ignore=true
 # Enabler for alto word accuracy checker
-flag.alto.checker.on=false
+flag.alto.checker.on=true
 
-# Max number of flags to make for one batch (max 100 approved by ML/Skejby)
-flag.maxtotalflags=100
 
-manualqa.input.files.dir=/home/newspapr/temp/qainput
+manualqa.input.files.dir=target/qainput
