Updated the config for the integration tests

--- a/src/test/config/inconsistent-flagging-config.properties
+++ b/src/test/config/inconsistent-flagging-config.properties
@@ -9,48 +9,59 @@ flag.mix.maximagewidth=15000
 flag.mix.minimageheight=4000
 flag.mix.maximageheight=12000
 
-flag.alto.accuracy=60.0
-flag.alto.accuracy.perfile=20.0
-flag.alto.zeroaccuracy.ignore=true
+#This means that the lowest 3 colors are ignored, ie. 0, 1 and 2.
+flag.ignoreColorsBelow=4
+# When a color has this value or below, it is considered missing.
+flag.maxValueToDeemAColorMissing=25
+# Max number of flags to make for one batch (max 100 approved by ML/Skejby)
+flag.maxtotalflags=100
 
 
 # MANUAL QA FLAGGER CONFIG - MissingColorsHistogramChecker:
 # The number of missing colors allowed
-flag.numberofmissingcolorsallowed=0
-# When a color has this value or below, it is considered missing
-flag.maxvaluetodeemacolormissing=10
+flag.missingcolors.numberOfMissingColorsAllowed=0
 
 # MANUAL QA FLAGGER CONFIG - ChoppyCurveHistogramChecker:
 # How much a value is allowed to deviate from the average of its two neighbours
 # (in pct, >0) before it is considered an irregularity (only happens if both
 # neighbours are either higher or lower)
-flag.choppycheckthreshold=0.5
+flag.choppyCurve.checkthreshold=0.5
 # The maximum number of peaks/valleys allowed before flagged as an error
-flag.choppycheckmaxirregularities=4
+flag.choppyCurve.checkMaxIrregularities=2
 
 # MANUAL QA FLAGGER CONFIG - EditionModsHandler:
-# The maximum number of editions of a newspaper per day before we raise a flag
-flag.maxeditionsperday=3
+# The maximum number of editions of a newspaper per day before we raise a flag.
+# (Limit of 4 approved by ML/Skejby)
+flag.editions.maxeditionsperday=4
 
 # MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
-flag.darknessmaxnumofdarkimagesallowed=300
-flag.darknesslowesthistogramindexnotconsideredblack=3
-flag.darknesslowestacceptablepeakposition=128
+# How many too dark images there must be before the film is flagges as too dark
+flag.darkness.MaxNumOfDarkImagesAllowed=100
+flag.darkness.lowestAcceptablePeakPosition=128
 # Min number of text lines on page before we consider this a text
-# (non image-only) page, and therefore check for darkness
-flag.darknessminnumoftextlines=50
+# (non image-only) page, and therefore check for darkness.
+# (15 is the limit suggested by ML/Skejby)
+flag.darkness.minNumOfTextLines=15
 
 # MANUAL QA FLAGGER CONFIG - EndSpikeHistogramChecker:
 # Max percentage of the total number of pixels in the histogram that are
-# allowed to be in a spike at the beginning or end of the histogram
-flag.endspikethreshold=0.1
-flag.endspikemincolorconsideredblack=0
-flag.endspikemaxcolorconsideredblack=2
-flag.endspikemincolorconsideredwhite=255
-flag.endspikemaxcolorconsideredwhite=255
-flag.endspikemaxpercentallowednearblack=2
-flag.endspikemaxpercentallowednearwhite=0.5
+# allowed to be in a spike anywhere in the histogram (for a whole film)
+flag.endspike.threshold=0.1
+flag.endspike.minColorConsideredBlack=0
+flag.endspike.minColorConsideredWhite=255
+flag.endspike.maxColorConsideredWhite=255
+
+# 0.05 was not low enough to catch black-spikes in 9* B400026952148-RT4
+flag.endspike.maxPercentAllowedNearBlack=5
+flag.endspike.maxPercentAllowedNearWhite=0.01
 
 
-# Max number of flags to make for one batch
-flag.maxtotalflags=100
+
+flag.alto.accuracy=60.0
+# Set to never trigger on low OCR accuracy for a single file, as we expect this
+# would give too many false positives
+flag.alto.accuracy.perfile=0.0
+flag.alto.zeroaccuracy.ignore=true
+
+
+manualqa.input.files.dir=/home/newspapr/temp/qainput
