Review followup. Virtually only comments

--- a/src/test/config/config.properties
+++ b/src/test/config/config.properties
@@ -6,8 +6,8 @@ iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER,HISTOG
 
 #This means that the lowest 3 colors are ignored, ie. 0, 1 and 2.
 flag.ignoreColorsBelow=4
-# When a color has this value or below, it is considered missing.
-flag.maxValueToDeemAColorMissing=25
+# When a color has this value or below, it is considered missing
+flag.maxValueToDeemAColorMissing=10
 # Max number of flags to make for one batch (max 100 approved by ML/Skejby)
 flag.maxtotalflags=100
 
@@ -19,7 +19,7 @@ flag.missingcolors.numberOfMissingColorsAllowed=0
 
 # MANUAL QA FLAGGER CONFIG - ChoppyCurveHistogramChecker:
 # How much a value is allowed to deviate from the average of its two neighbours
-# (in pct, >0) before it is considered an irregularity (only happens if both
+# (in pct?, so 0.5=50%) before it is considered an irregularity (only happens if both
 # neighbours are either higher or lower)
 flag.choppyCurve.checkthreshold=0.5
 # The maximum number of peaks/valleys allowed before flagged as an error
@@ -33,6 +33,7 @@ flag.editions.maxeditionsperday=4
 # MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
 # How many too dark images there must be before the film is flagges as too dark
 flag.darkness.MaxNumOfDarkImagesAllowed=100
+#If the "white" spike is below this color, the image is regarded as too dark.
 flag.darkness.lowestAcceptablePeakPosition=128
 # Min number of text lines on page before we consider this a text
 # (non image-only) page, and therefore check for darkness.
@@ -45,13 +46,19 @@ flag.darkness.histogramCheckerOn=true
 # MANUAL QA FLAGGER CONFIG - EndSpikeHistogramChecker:
 # Max percentage of the total number of pixels in the histogram that are
 # allowed to be in a spike anywhere in the histogram (for a whole film)
+# except in the "white" or "black" spikes
 flag.endspike.threshold=0.1
-flag.endspike.minColorConsideredBlack=0
-flag.endspike.minColorConsideredWhite=255
-flag.endspike.maxColorConsideredWhite=255
 
-# 0.05 was not low enough to catch black-spikes in 9* B400026952148-RT4
-flag.endspike.maxPercentAllowedNearBlack=5
+#The "black" spike will be from this value to "flag.ignoreColorsBelow".
+flag.endspike.minColorConsideredBlack=0
+# 7% of the pixels are allowed to be in the "black" spike
+flag.endspike.maxPercentAllowedNearBlack=7
+
+#The "white" spike will be from this value
+flag.endspike.minColorConsideredWhite=255
+# to this value
+flag.endspike.maxColorConsideredWhite=255
+#only 0.01% of the pixels are allowed to be in the "white" spike
 flag.endspike.maxPercentAllowedNearWhite=0.01
 
 
