--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   </parent>
 
   <artifactId>newspaper-manualQA-flagger</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 
   <scm>
     <url>https://github.com/statsbiblioteket/newspaper-manualQA-flagger</url>
     <connection>scm:git:https://github.com/statsbiblioteket/newspaper-manualQA-flagger.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/newspaper-manualQA-flagger.git</developerConnection>
-    <tag>newspaper-manualQA-flagger-1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
@@ -92,17 +92,17 @@
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>tree-processor</artifactId>
-      <version>1.6</version>
+      <version>1.7-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>sboi-doms-autonomous-component</artifactId>
-      <version>1.6</version>
+      <version>1.7-SNAPSHOT</version>
     </dependency>
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
         <artifactId>tree-processor-runnable-component</artifactId>
-        <version>1.6</version>
+        <version>1.7-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
