--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   </parent>
 
   <artifactId>newspaper-manualQA-flagger</artifactId>
-  <version>1.4</version>
+  <version>1.5-SNAPSHOT</version>
 
   <scm>
     <url>https://github.com/statsbiblioteket/newspaper-manualQA-flagger</url>
     <connection>scm:git:https://github.com/statsbiblioteket/newspaper-manualQA-flagger.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/newspaper-manualQA-flagger.git</developerConnection>
-    <tag>newspaper-manualQA-flagger-1.4</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
