--- a/pom.xml
+++ b/pom.xml
@@ -92,17 +92,17 @@
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>tree-processor</artifactId>
-      <version>1.8</version>
+      <version>1.10-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>dk.statsbiblioteket.newspaper</groupId>
       <artifactId>sboi-doms-autonomous-component</artifactId>
-      <version>1.8</version>
+        <version>1.10-SNAPSHOT</version>
     </dependency>
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
         <artifactId>tree-processor-runnable-component</artifactId>
-        <version>1.8</version>
+          <version>1.10-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
