--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -1,17 +1,17 @@
 #Doms
-doms.username=
-doms.password=
-doms.url=http://achernar:7880/fedora
-doms.pidgenerator.url=http://achernar:7880/pidgenerator-service
+doms.username={doms.username}
+doms.password={doms.password}
+doms.url=http://{doms.host}:{doms.port}/fedora
+doms.pidgenerator.url=http://{doms.host}:{doms.port}/pidgenerator-service
 
 #MFPak
-mfpak.postgres.url=jdbc:postgresql://achernar/mfpak-devel
-mfpak.postgres.user=
-mfpak.postgres.password=
+mfpak.postgres.url={mfpak.postgres.url}
+mfpak.postgres.user={mfpak.postgres.username}
+mfpak.postgres.password={mfpak.postgres.password}
 
 #Batch iterator
 iterator.useFileSystem=false
-iterator.filesystem.batches.folder=/newspapr_batches
+iterator.filesystem.batches.folder={avis.folder}
 iterator.datafilePattern=.*\\.jp2$
 iterator.filesystem.groupingChar=.
 iterator.filesystem.checksumPostfix=.md5
@@ -19,14 +19,12 @@ iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER,HISTOG
 iterator.doms.predicatenames=info:fedora/fedora-system:def/relations-external#hasPart
 
 #Autonomous component framework
-autonomous.lockserver.url=localhost:2181
-autonomous.sboi.url=
-autonomous.pastSuccessfulEvents=Metadata_checked
-autonomous.futureEvents=Manual_QA_Flagged
+autonomous.lockserver.url={zookeeper.host}:{zookeper.port}
+autonomous.sboi.url=http://{sboi.host}:{sboi.port}/newspapr/sbsolr/
+autonomous.pastSuccessfulEvents=Metadata_checked,Histogrammed
+autonomous.futureEvents=Manual_QA_Flagged,Manually_stopped
 autonomous.maxRuntimeForWorkers=86400000
 autonomous.component.maxResults=100
-
-
 
 #This means that the lowest 3 colors are ignored, ie. 0, 1 and 2.
 flag.ignoreColorsBelow=4
@@ -52,7 +50,7 @@ flag.choppyCurve.checkMaxIrregularities=2
 # MANUAL QA FLAGGER CONFIG - EditionModsHandler:
 # The maximum number of editions of a newspaper per day before we raise a flag.
 # (Limit of 4 approved by ML/Skejby)
-flag.editions.maxeditionsperday=4
+flag.editions.maxeditionsperday=5
 
 # MANUAL QA FLAGGER CONFIG - DarknessHistogramChecker:
 # How many too dark images there must be before the film is flagges as too dark
@@ -68,13 +66,13 @@ flag.darkness.minNumOfTextLines=15
 # Max percentage of the total number of pixels in the histogram that are
 # allowed to be in a spike anywhere in the histogram (for a whole film)
 # except in the "white" or "black" spikes
-flag.endspike.threshold=0.1
+flag.endspike.threshold=0.135
 
 
 #The "black" spike will be from this value to "flag.ignoreColorsBelow".
 flag.endspike.minColorConsideredBlack=0
-# 7% of the pixels are allowed to be in the "black" spike
-flag.endspike.maxPercentAllowedNearBlack=7
+# ½% of the pixels are allowed to be in the "black" spike
+flag.endspike.maxPercentAllowedNearBlack=8.2
 
 
 
@@ -102,26 +100,25 @@ flag.mix.scannerserialnos=120603
 # This value observed in 9* batch B400026952148-RT2
 flag.mix.scannersoftwares=Quantum Scan;V 1.02.19
 # Senthil added according to 9* batch B400026952148-RT2
-flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil
+flag.mix.imageproducers=State and University Library, Ninestars Information Technologies LTD, Senthil, Ravi
 
 # Min width found in B400026952148-RT4 was 2139 seen in file
 # 400026952148-14/2002-02-13-01/morgenavisenjyllandsposten-2002-02-13-01-0145.mix.xml
-flag.mix.minimagewidth=2100
+flag.mix.minimagewidth=1200
 # Max width found in B400026952148-RT4 was 5052 seen in file
 # 400026952148-13/2002-02-02-01/morgenavisenjyllandsposten-2002-02-02-01-0164A.mix.xml
-flag.mix.maximagewidth=5100
+flag.mix.maximagewidth=7000
 # Min height found in B400026952148-RT4 was 2832 seen in file
 # 400026952148-14/2002-02-17-01/morgenavisenjyllandsposten-2002-02-17-01-0465B.mix.xml
-flag.mix.minimageheight=2800
+flag.mix.minimageheight=1500
 # Max height found in B400026952148-RT4 was 6911 seen in file
 # 400026952148-11/2002-01-13-01/morgenavisenjyllandsposten-2002-01-13-01-0126A.mix.xml
-flag.mix.maximageheight=7000
+flag.mix.maximageheight=8000
 
-flag.alto.accuracy=60.0
+flag.alto.accuracy=35.0
 # Set to never trigger on low OCR accuracy for a single file, as we expect this
 # would give too many false positives
 flag.alto.accuracy.perfile=0.0
 flag.alto.zeroaccuracy.ignore=true
 
-
-manualqa.input.files.dir=/home/newspapr/temp/qainput
+manualqa.input.files.dir={manualqa.flags.dir}
