--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -1,3 +1,5 @@
+#The definition of these parameters can be found in dk.statsbiblioteket.medieplatform.autonomous.ConfigConstants
+
 #Doms
 doms.username={doms.username}
 doms.password={doms.password}
@@ -11,10 +13,7 @@ mfpak.postgres.password={mfpak.postgres.password}
 
 #Batch iterator
 iterator.useFileSystem=false
-iterator.filesystem.batches.folder={avis.folder}
 iterator.datafilePattern=.*\\.jp2$
-iterator.filesystem.groupingChar=.
-iterator.filesystem.checksumPostfix=.md5
 iterator.doms.attributenames=MODS,FILM,EDITION,ALTO,MIX,CONTENTS,JPYLYZER,HISTOGRAM
 iterator.doms.predicatenames=info:fedora/fedora-system:def/relations-external#hasPart
 
@@ -22,8 +21,14 @@ iterator.doms.predicatenames=info:fedora/fedora-system:def/relations-external#ha
 autonomous.lockserver.url={zookeeper.host}:{zookeper.port}
 autonomous.sboi.url=http://{sboi.host}:{sboi.port}/newspapr/sbsolr/
 autonomous.pastSuccessfulEvents=Metadata_checked,Histogrammed
+autonomous.oldEvents=
+autonomous.itemTypes=doms:ContentModel_RoundTrip
+autonomous.sboi.pageSize=100
 autonomous.futureEvents=Manual_QA_Flagged,Manually_stopped
+autonomous.maxThreads=1
+autonomous.workQueueSize=1
 autonomous.maxRuntimeForWorkers=86400000
+autonomous.component.threadsPerBatch=1
 autonomous.component.maxResults=100
 
 #This means that the lowest 3 colors are ignored, ie. 0, 1 and 2.
