--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   </parent>
 
   <artifactId>newspaper-manualQA-flagger</artifactId>
-  <version>1.6</version>
+  <version>1.7-SNAPSHOT</version>
 
   <scm>
     <url>https://github.com/statsbiblioteket/newspaper-manualQA-flagger</url>
     <connection>scm:git:https://github.com/statsbiblioteket/newspaper-manualQA-flagger.git</connection>
     <developerConnection>scm:git:git@github.com:statsbiblioteket/newspaper-manualQA-flagger.git</developerConnection>
-    <tag>newspaper-manualQA-flagger-1.6</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
@@ -93,12 +93,12 @@
       <dependency>
         <groupId>dk.statsbiblioteket.newspaper</groupId>
         <artifactId>tree-processor-runnable-component</artifactId>
-        <version>2.0</version>
+        <version>2.1-SNAPSHOT</version>
       </dependency>
       <dependency>
           <groupId>dk.statsbiblioteket.newspaper</groupId>
           <artifactId>newspaper-autonomous-component</artifactId>
-          <version>2.0</version>
+          <version>2.1-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
