add second scanners serial number to configuration

--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -101,7 +101,7 @@ flag.mix.scannermodels=Mekel Technology
 # This value observed in 9* batch B400026952148-RT2
 flag.mix.modelnumbers=MACH V
 # This value observed in 9* batch B400026952148-RT2
-flag.mix.scannerserialnos=120603
+flag.mix.scannerserialnos=120603, 120807
 # This value observed in 9* batch B400026952148-RT2
 flag.mix.scannersoftwares=Quantum Scan;V 1.02.19
 # Senthil added according to 9* batch B400026952148-RT2
